# docker-rust-api

./: .gitattributes  .gitignore  Cargo.toml
example/paralon-template/: paralon.yaml
example/scripts/: top_ten.py
paralon/: Dockerfile  entry.sh  run-via-api.sh  run.sh
src/: main.rs
src/manager/: manager.rs
src/puller/: minio.rs
