[package]
name = "paralon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-client = "0.2.0"
docker-rust-api = "1.42.1"
reqwest = "0.11.14"
rs-docker = "0.0.60"
rust-s3 = "0.32"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
